# asr_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker_images.sh  docker-compose.yml  models
asr_server/: Cargo.toml
asr_server/examples/: audio_transcription.rs  basic_use.rs
asr_server/src/: lib.rs  main.rs
asr_server/src/asr/: server.rs
asr_server/src/asr/api/: asr_handler.rs  mod.rs
asr_server/src/base/: record.rs  trace.rs
asr_server/whisper-rs/: Cargo.toml
code/: README.md  app.py  requirements.txt  start.sh  tracker.py
config/: asr.yaml
templates/: index.html
