[package]
name = "asr_server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.69"
rayon = "1.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.9.21"
actix = "0.13.0"
actix-web = "4.3.0"
actix-files = "0.6"
actix-cors = "0.7.0"
actix-web-actors = "4.2.0"
actix-multipart = "0.6.1"
time = { version = "0.3.20", features = ["macros"] }
clap = { version = "4.4.4", features = ["derive"] }
tracing-appender = { version = "0.2.2" }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing = "0.1.37"
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
ndarray = "0.15.6"
lazy_static = "1"
pinyin = "0.10"
unicode-normalization = "0.1"
hound = "3"
chrono = "0.4"
prettytable = "0.10"
rubato = "0.14.1"
whisper-rs = { path = "whisper-rs"}
opencc-rs = "0.3.2"
opus = "0.3"
webm = "1.1.0"
webm-iterable = "0.6.0"
minimp3 = "0.5.1"
fdk-aac = "0.6.0"